# python-bootcamp

./: README.md  day1_part2.py  day2.ipynb  pyproject.toml
2021/: day10.ipynb  day1_part1.py  day1_part2.py  day2.ipynb  day3.ipynb
2024/: day1_1.py
