[tool.poetry]
name = "advent-bootcamp"
version = "0.1.0"
description = "Advent of Code completions"
authors = ["dymok <dymm@box4.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
numpy = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
